fix: unwanted bottom space on mobile

--- a/src/components/Background.module.css
+++ b/src/components/Background.module.css
@@ -1,3 +1,21 @@
+.iframe {
+  display: block;
+  block-size: 100vb;
+  inline-size: 100vi;
+  border: none;
+  position: absolute;
+  /* inset: 0; */
+}
+
+.iframe::before {
+  content: "";
+  display: block;
+  block-size: 100vb;
+  inline-size: 100vi;
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+}
+
 /* Start of squares background */
 .background {
   margin: 0;
